#llama-index 사용
- llama-index branch에서 llama-index 및 open ai 사용하는 부분 가져와서 django views파일에 추가

--- a/recipezo_app/templates/parameter.html
+++ b/recipezo_app/templates/parameter.html
@@ -9,6 +9,7 @@
     {{ data }}<br />
     <!--    POST     -->
     ingredient = {{ ingredient }}<br >
+    recommended menu = {{ response }}<br >
 <a href="{% url 'post' %}">post</a>
 </body>
 </html>
