--- a/recipezo_app/templates/parameter.html
+++ b/recipezo_app/templates/parameter.html
@@ -8,29 +8,102 @@
     <!--    POST     -->
 <!--    <p>{{res}}</p>-->
     <h3>recommended menu1</h3>
-    <p>{{ menu1}}</p>
+    <p>{{menu1}}</p>
     <h3>ingredients1</h3>
     {% for ingre1 in ingredient1 %}
         <p>{{ ingre1 }}</p>
     {% endfor %}
-    <h3>Recipe1</h3>
-    {% for step1 in steps1 %}
-        <p>{{ step1 }}</p>
-    {% endfor %}
+    <button id="open-modal">{{menu1}} 레시피 보기</button>
+
     <h3>recommended menu2</h3>
     <p>{{ menu2 }}</p>
     <h3>ingredients2</h3>
     {% for ingre2 in ingredient2 %}
         <p>{{ ingre2 }}</p>
     {% endfor %}
-    <h3>Recipe2</h3>
-    {% for step2 in steps2 %}
-        <p>{{ step2 }}</p>
-    {% endfor %}
-    <a href="{% url 'post' %}">post</a>
+
+    <button id="open-modal2">{{menu2}} 레시피 보기</button>
+    <p><a href="{% url 'post' %}">post</a></p>
+
+
+    <div id="modal">
+        <div class="modal-content">
+            <h1>{{menu1}}</h1>
+            <h3>Recipe</h3>
+            {% for step1 in steps1 %}
+                <p>{{ step1 }}</p>
+            {% endfor %}
+            <button id="close-modal">닫기</button>
+        </div>
+    </div>
+
+    <div id="modal2">
+        <div class="modal-content">
+            <h1>{{menu2}}</h1>
+            <h3>Recipe</h3>
+            {% for step2 in steps2 %}
+                <p>{{ step2 }}</p>
+            {% endfor %}
+            <button id="close-modal2">닫기</button>
+        </div>
+    </div>
 </body>
 </html>
-
+<script src="https://code.jquery.com/jquery-3.4.1.js"></script>
 <script>
-
+    const modal = document.getElementById("modal");
+    const modal2 = document.getElementById("modal2");
+    const openModalBtn = document.getElementById("open-modal");
+    const openModalBtn2 = document.getElementById("open-modal2");
+    const closeModalBtn = document.getElementById("close-modal");
+    const closeModalBtn2 = document.getElementById("close-modal2");
+    // 모달창 열기
+    openModalBtn.addEventListener("click", () => {
+        modal.style.display = "block";
+        document.body.style.overflow = "hidden"; // 스크롤바 제거
+    });// 모달창 열기
+    openModalBtn2.addEventListener("click", () => {
+        modal2.style.display = "block";
+        document.body.style.overflow = "hidden"; // 스크롤바 제거
+    });
+    // 모달창 닫기
+    closeModalBtn.addEventListener("click", () => {
+        modal.style.display = "none";
+        document.body.style.overflow = "auto"; // 스크롤바 보이기
+    });
+    closeModalBtn2.addEventListener("click", () => {
+        modal2.style.display = "none";
+        document.body.style.overflow = "auto"; // 스크롤바 보이기
+    });
 </script>
+<style>
+    #modal {
+        position: fixed;
+        z-index: 1;
+        left: 0;
+        top: 0;
+        width: 100%;
+        height: 100%;
+        overflow: auto;
+        background-color: rgba(0, 0, 0, 0.4);
+        display: none;
+    }
+    #modal2 {
+        position: fixed;
+        z-index: 1;
+        left: 0;
+        top: 0;
+        width: 100%;
+        height: 100%;
+        overflow: auto;
+        background-color: rgba(0, 0, 0, 0.4);
+        display: none;
+    }
+    .modal-content {
+        background-color: #fefefe;
+        margin: 15% auto;
+        padding: 20px;
+        border: 1px solid #888;
+        width: 80%;
+    }
+</style>
