--- a/recipezo_app/templates/post.html
+++ b/recipezo_app/templates/post.html
@@ -3,12 +3,40 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </head>
 <body>
-    <form id="contents" name="contents" method="post" action="{% url 'parameter' %}">
+    <form id="contents" name="contents" method="post" action="{% url 'parameter' %}" class="pt-4">
         {% csrf_token %}
-        ingredient : <input name="ingredient" type="text">
-        <input type="submit" value="send">
+        <span class="m-3">ingredient : </span>
+        <input name="ingredient" type="text">
+        <input type="submit" value="send" id="do-call">
     </form>
+    <div id="spinner-div" class="pt-5">
+        <div class="spinner-border text-primary" role="status"></div>
+    </div>
 </body>
+<script src="https://code.jquery.com/jquery-3.4.1.js"></script>
+<script>
+    $(document).ready(function () {
+    $("#do-call").click(function () {//The load button
+        $('#spinner-div').show();//Load button clicked show spinner
+    });
+});
+</script>
+<style>
+    #spinner-div {
+        position: fixed;
+        display: none;
+        width: 100%;
+        height: 100%;
+        top: 0;
+        left: 0;
+        text-align: center;
+        background-color: rgba(255, 255, 255, 0.8);
+        z-index: 2;
+    }
+
+</style>
 </html>
