#음식취향입력받기
- recipe json에 카테고리(영국식, 일식, 한식) 추가
- post.html에서 취향 입력받을 수 있도록 변경
- prompt 수정

--- a/recipezo_app/templates/post.html
+++ b/recipezo_app/templates/post.html
@@ -9,6 +9,8 @@
 <body>
     <form id="contents" name="contents" method="post" action="{% url 'parameter' %}" class="pt-4">
         {% csrf_token %}
+        <span class="m-3">taste : </span>
+        <input name="taste" type="text">
         <span class="m-3">ingredient : </span>
         <input name="ingredient" type="text">
         <input type="submit" value="send" id="do-call">
